--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-main:
+xmain:
   - title: "Posts"
     url: /posts/
   - title: "Categories"
@@ -7,3 +7,39 @@ main:
     url: /tags/
   - title: "About"
     url: /about/
+main:
+sidebar:
+  - title: Browse
+    children:
+      - title: "Organizations"
+        url: /docs/quick-start-guide/
+      - title: "Working Groups"
+        url: /docs/quick-start-guide/
+      - title: "Events"
+        url: /docs/structure/
+      - title: "Publications"
+        url: /docs/installation/
+      - title: "Products and Services"
+        url: /docs/upgrading/
+  - title: Graphs
+    children:
+      - title: "Graph 1"
+        url: /docs/quick-start-guide/
+  - title: Topics & Tags
+    children:
+      - title: "Digital Harms"
+        url: /docs/quick-start-guide/
+      - title: "Activities"
+        url: /docs/structure/
+      - title: "Purposes"
+        url: /docs/installation/
+  - title: Instructions
+    children:
+      - title: "Browsing"
+        url: /docs/quick-start-guide/
+      - title: "Editing"
+        url: /docs/structure/
+      - title: "Edit with Prose"
+        url: https://prose.io/#Me2B-Alliance/GoodTechWiki/tree/init/nodes
+      - title: "GitHub"
+        url: https://github.com/Me2B-Alliance/GoodTechWiki/tree/init/nodes
